# PlantDiseaseDetection

./: Dockerfile  README.md  app.py  requirements.txt  setup.py  template.py
.github/workflows/: main.yaml
flowchart/model-result/: hyp.yaml  opt.yaml  results.csv
plantdiseasedetection/components/: data_ingestion.py  data_validation.py  model_trainer.py
plantdiseasedetection/constant/training_pipeline/: __init__.py
plantdiseasedetection/entity/: artifacts_entity.py  config_entity.py
plantdiseasedetection/pipeline/: training_pipeline.py
plantdiseasedetection/utils/: main_utils.py
reseach/: trials.ipynb
src/PlantDiseaseDetection/: __init__.py
templates/: index.html
yolov9/: .gitignore  detect.py  pyproject.toml  requirements.txt
yolov9/data/hyps/: hyp.scratch-high.yaml
